--- a/src/main/resources/assets/pointersmod/lang/en_US.lang
+++ b/src/main/resources/assets/pointersmod/lang/en_US.lang
@@ -1,6 +1,7 @@
 item.pointersmod.pointer_inv.name=Inventory Pointer
 item.pointersmod.pointer_world.name=Mechanical Pointer
 item.pointersmod.pointer_redstone.name=Redstone Pointer
+item.pointersmod.pointer_teleport.name=Positional Pointer
 
 tile.pointersmod.receiver_redstone.name=Redstone Receiver
 
