Made inventory pointers less weird (Closes #10)
- Inventory pointer slot texture made more pointer-y.
- Inventory pointer gui size is now dynamic!
- Inventory pointers now show the name of the block they're bound to in
  the item tooltip.
- Fixed creative tab name
- More attempts at fixing the Redstone Receiver, but I got sick of working
  with it, so it will just remain slightly glitchy for a while.

--- a/src/main/resources/assets/pointersmod/lang/en_US.lang
+++ b/src/main/resources/assets/pointersmod/lang/en_US.lang
@@ -2,13 +2,15 @@ item.pointersmod.pointer_inv.name=Inventory Pointer
 item.pointersmod.pointer_world.name=Mechanical Pointer
 item.pointersmod.pointer_redstone.name=Redstone Pointer
 item.pointersmod.pointer_teleport.name=Positional Pointer
+item.pointersmod.pointer_inv.name.fmt=Inventory Pointer (%s)
 
 tile.pointersmod.receiver_redstone.name=Redstone Receiver
 
-itemgroup.pointersmod=Pointers
+itemGroup.pointersmod=Pointers
 
 pointers.blockpos=Bound to %d, %d, %d.
 pointers.facing=Bound on face: %s.
 pointers.dimension=Bound to dimension %d.
 pointers.notarget=No target.
+pointers.targetname=Target block: %s.
 pointers.availableslots=%d slots available on face %s.
