--- a/src/main/resources/assets/pointersmod/lang/en_US.lang
+++ b/src/main/resources/assets/pointersmod/lang/en_US.lang
@@ -2,7 +2,6 @@ item.pointersmod.pointer_inv.name=Inventory Pointer
 item.pointersmod.pointer_world.name=Mechanical Pointer
 item.pointersmod.pointer_redstone.name=Redstone Pointer
 item.pointersmod.pointer_teleport.name=Positional Pointer
-item.pointersmod.pointer_inv.name.fmt=Inventory Pointer (%s)
 
 tile.pointersmod.receiver_redstone.name=Redstone Receiver
 
@@ -14,3 +13,5 @@ pointers.dimension=Bound to dimension %d.
 pointers.notarget=No target.
 pointers.targetname=Target block: %s.
 pointers.availableslots=%d slots available on face %s.
+pointers.power=%d T/%d T
+pointers.powerperuse=%d T/use
