--- a/src/main/resources/assets/pointersmod/lang/en_US.lang
+++ b/src/main/resources/assets/pointersmod/lang/en_US.lang
@@ -2,6 +2,8 @@ item.pointersmod.pointer_inv.name=Inventory Pointer
 item.pointersmod.pointer_world.name=Mechanical Pointer
 item.pointersmod.pointer_redstone.name=Redstone Pointer
 item.pointersmod.pointer_teleport.name=Positional Pointer
+item.pointersmod.pointer_fluid.name=Fluid Pointer [WIP]
+item.pointersmod.component.pointer.name=Pointer
 
 tile.pointersmod.receiver_redstone.name=Redstone Receiver
 
@@ -15,3 +17,4 @@ pointers.targetname=Target block: %s.
 pointers.availableslots=%d slots available on face %s.
 pointers.power=%d T/%d T
 pointers.powerperuse=%d T/use
+pointers.badtarget=Target nonexistent!
