Fluid pointers! (Closes #5)
- Added Fluid Pointers. Moves (by default) 1000mB of fluid from its target
  into any available fluid container in the player's inventory, or the
  same amount of fluid from containers in the player's inventory to the
  target (secondary action, activate by crouch right-clicking in main
  hand)

--- a/src/main/resources/assets/pointersmod/lang/en_US.lang
+++ b/src/main/resources/assets/pointersmod/lang/en_US.lang
@@ -2,7 +2,7 @@ item.pointersmod.pointer_inv.name=Inventory Pointer
 item.pointersmod.pointer_world.name=Mechanical Pointer
 item.pointersmod.pointer_redstone.name=Redstone Pointer
 item.pointersmod.pointer_teleport.name=Positional Pointer
-item.pointersmod.pointer_fluid.name=Fluid Pointer [WIP]
+item.pointersmod.pointer_fluid.name=Fluid Pointer
 item.pointersmod.component.pointer.name=Pointer
 
 tile.pointersmod.receiver_redstone.name=Redstone Receiver
